# Ectoplasme

./: .gitignore  CMakeLists.txt  CMakePresets.json  Ectoplasme.cpp  Ectoplasme.h  README.md
.github/workflows/: cmake.yml
dependencies/opengl/: CMakeLists.txt
dependencies/opengl/include/glad/: glad.h
dependencies/opengl/src/: glad.c
src/: wgpu.cpp  wgpu.h  wgpucallback.cpp  wgpuhelper.cpp  wgpuhelper.h
